# RAG_Techniques

./: pyproject.toml
src/: 1_simple_rag.ipynb
src/utils/: evaluation.py  langchain_evaluation.py
