[project]
name = "rag-techniques"
version = "0.1.0"
description = ""
authors = [
    {name = "killermama98",email = "ctkiena2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-deepseek (>=0.1.2,<0.2.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "pypdf (>=5.3.0,<6.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "deepeval (>=2.3.8,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
